# copier-litestar-pg-redis-docker

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.md.jinja  alembic.ini  copier.yaml  docker-compose,yml  docker-compose.yaml  docker-compose.yml  gunicorn.conf.py  mypy.ini  pyproject.toml  pyproject.toml.jinja  sonar-project.properties  tox.ini
.github/workflows/: ci.yaml  codeql.yml
.run/: Example App.run.xml
alembic/: env.py  script.py.mako
alembic/versions/: 3414271828cc_initial_revision.py  5217849a7050_added_prj.py  622211feaeb0_initial_revision.py  6e3d14bbe099_country.py  769c4a8c5435_initial_revision.py  c41960c217ac_squash.py
app/: cache.py  config.py  constants.py  db.py  exceptions.py  health.py  logging.py  main.py  openapi.py  settings.py
app/api/: items.py  router.py  users.py  utils.py
app/api/controllers/: user.py
app/controllers/: __init__.py  __init__.py.jinja  authors.py  countries.py  country.py  projects.py  templates.py  {{domain}}.py
app/core/: __init__.py  cache.py  controller.py  db.py  dependencies.py  exceptions.py  filter_parameters.py  guards.py  handlers.py  logging.py  model.py  openapi.py  response.py  routes.py  schema.py  sentry.py  service.py
app/core/client/: __init__.py  client.py  endpoint.py
app/core/repository/: __init__.py  exceptions.py  repository.py
app/core/types/: __init__.py  data.py
app/domain/: __init__.py  __init__.py.jinja  authors.py  countries.py  country.py  model.py  projects.py  templates.py  {{domain}}s.py.jinja
app/domain/entities/: __init__.py  controller.py  model.py  repository.py  schema.py  service.py  types.py
app/domain/integrations/: __init__.py  controller.py  model.py  repository.py  schema.py  service.py  types.py
app/domain/providers/: __init__.py  controller.py  model.py  repository.py  schema.py  service.py
app/domain/providers/entities/: __init__.py  controller.py  service.py
app/domain/providers/integrations/: __init__.py  controller.py  service.py
app/lib/: __init__.py  auth.py  cache.py  constants.py  dependencies.py  dto.py  exceptions.py  health.py  logging.py  openapi.py  redis.py  response.py  sentry.py  service.py  settings.py  sqlalchemy_plugin.py  static_files.py  type_encoders.py  worker.py
app/lib/repository/: filters.py  sqlalchemy.py
app/lib/users/: __init__.py  controllers.py
app/models/: __init__.py  base.py  item.py  user.py
app/repositories/: base.py  item.py  user.py
app/utils/: __init__.py  pg_uuid.py  postgres_ready.py  redis_ready.py  restartable_worker.py  security.py
app/worker/: __init__.py  authors.py
backend/alembic/: env.py
backend/alembic/versions/: a373f7db0e53_init.py  da21eae3dd41_init.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/controllers/: user.py
backend/app/controllers/v1/: __init__.py  user.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: db.py  session.py
backend/app/models/: __init__.py  base.py  item.py  mixins.py  user.py
backend/app/repositories/: base.py  item.py  user.py
scripts/: entry  entrypoint.sh  tests
src/app/: cache.py  config.py  db.py  exceptions.py  health.py  main.py
src/app/api/: __init__.py  items.py  router.py  users.py  utils.py
src/app/api/controllers/: __init__.py  user.py
src/app/models/: __init__.py  base.py  item.py  mixins.py  sa_uuid.py  user.py
src/app/repositories/: __init__.py  base.py  item.py  user.py
src/app/types/: __init__.py  data.py
src/app/utils/: __init__.py  pg_uuid.py  postgres_ready.py  redis_ready.py  response.py  restartable_worker.py  security.py  types.py
tests/: conftest.py  factories.py  test_cache.py  test_repository.py  test_user_controller.py  utils.py
tests/domain/providers/: conftest.py
tests/domain/providers/entities/: conftest.py  test_service.py
tests/integration/: conftest.py  test_authors.py  test_countries.py  test_tests.py
tests/items/: conftest.py  test_controller.py
tests/unit/: conftest.py  utils.py
tests/unit/controllers/: test_authors.py  test_countries.py
tests/unit/lib/: test_cache.py  test_dependencies.py  test_dto.py  test_email.py  test_exceptions.py  test_health.py  test_logging.py  test_orm.py
tests/unit/lib/repository/: test_abc.py  test_sqlalchemy.py
tests/users/: conftest.py  test_controller.py
utils/: restartable_worker.py
